<resources>
    <string name="app_name">LegionTzabar</string>
    <string name="sadak">סד\"כ</string>
    <string name="login">התחברות</string>
    <string name="numOfTrys">מספר נסיונות:</string>
    <string name="password">סיסמה</string>
    <string name="userName">שם משתמש</string>
    <string name="addBtn">+</string>
    <string name="title_activity_navigator">NavigatorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_communication">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameOfSolider">שם החייל:</string>
    <string name="personalNumber">מספר אישי:</string>
    <string name="yamam">ימ\"מ:</string>
    <string name="cellphoneNumber">טלפון:</string>
    <string name="mail">מייל</string>
    <string name="adress">כתובת</string>
    <string name="btnOk">אישור</string>
    <string name="btnCancel">ביטול</string>
    <string name="contactList">רשימת תפוצה:</string>
    <string name="btnAddFiles">הוספת קבצים</string>
    <string name="btnSend">שליחה</string>
    <string name="tvTraining">אימונים</string>
    <string name="Qualify">הכשרות</string>
    <string name="qualifyName">שם הכשרה:</string>
    <string name="Period">תוקף:</string>
    <string name="period">תוקף:</string>
    <string name="mid">מספר אישי:</string>
    <string name="addQualification">הוספת הכשרה</string>
    <string name="manResourse">כוח אדם</string>
    <string name="communication">תקשורת</string>
    <string name="qualifications">הכשרות</string>
    <string name="MiluimDays">ימי מילואים:</string>
    <string name="ResidentPlace">מקום מגורים:</string>
    <string name="LastYearMiluimDays">ימ\"מ בשנה האחרונה:</string>
    <string name="soliderDetails">פרטי החייל</string>
    <string name="edit">עריכה</string>
    <string name="call">התקשר</string>
    <string name="sendMail">שלח מייל</string>
    <string name="addTraining">הוספת אימון</string>
    <string name="TrainingDate">תאריך אימון:</string>
    <string name="Mishtatfim">משתתפים:</string>
    <string name="addFiles">הוספת קבצים</string>
    <string name="add">צירוף קובץ</string>
    <string name="addFile">הוספת קבצים:</string>
    <string name="mailNewSolider">מייל:</string>
    <string name="addressNewSolider">כתובת:</string>
    <string name="Position">מיקום:</string>
    <string name="files">קבצים:</string>
    <string name="RoleTable">תפקיד</string>
    <string name="PlugaTable">פלוגה</string>
    <string name="SoliderNameTable">שם החייל:</string>
    <string name="rememberMe">זכור אותי</string>
    <string name="ConnectToComputer">התחבר למחשב</string>
    <string name="emailAdress">כתובת מייל:</string>
    <string name="solider_name">שם</string>
    <string name="personal_id">מספר אישי</string>
    <string name="platoon">פלוגה</string>
    <string name="solider_qialification">הכשרה</string>
    <string name="israeli_id">תעודת זהות:</string>
    <string name="gender">מין:</string>
    <string name="last_name">שם משפחה:</string>
    <string name="rank">דרגה:</string>
    <string name="occupation">מקצוע:</string>
    <string name="in_matzeva">במצבה:</string>
    <string name="military_occupation">מקצוע צבאי:</string>
    <string name="addNewSolider">הוספת חייל</string>
    <string name="solider_details">פרטי החייל</string>
    <string name="sendEmail">שלח מייל</string>
    <string name="callSoldier">התקשר</string>
    <string name="openSoldierInfo">הצג פרטים</string>
    <string name="file3">קובץ 1</string>
    <string name="file2">קובץ 2</string>
    <string name="file1">קובץ 3</string>
    <string name="TrainingCode">קוד אימון:</string>
    <string name="trainingDetails">פרטי אימון(דמו)</string>
</resources>
